   * scripts/oxli: added script for running tests in development directory.
   * khmer/{__init__,khmer_args}.py,tests/{test_normalize_by_median,
   test_script_arguments}.py: refactored out use of AssertionError by not
   throwing plain Exceptions when a ValueError or RuntimeError would do.
   * oxli/__init__.py: give default help instead of an error when `oxli` is
   called with no arguments.

2015-07-27  Titus Brown  <titus@idyll.org>

   * khmer/khmer_args.py,CITATION: added entry for PeerJ paper on
   semi-streaming to citations.
   * scripts/{abundance-dist-single.py,abundance-dist.py,count-median.py,
   count-overlap.py,filter-abund-single.py,load-into-counting.py}: changed
   default behavior to output data in CSV format and report total k-mers.
   * tests/test_scripts.py: updated/removed tests for CSV.
   * doc/whats-new-2.0.rst: added information about change in columnar output,
   along with other minor corrections.
   * scripts/normalize-by-median.py: corrected epilog.
   * khmer/thread_utils.py,
   sandbox/{calc-best-assembly.py,extract-single-partition.py},
   scripts/{count-median.py,extract-long-sequences.py,extract-paired-reads.py,
   extract-partitions.py,fastq-to-fasta.py,
   interleave-reads.py,normalize-by-median.py,readstats.py,
   sample-reads-randomly.py,split-paired-reads.py,trim-low-abund.py},
   tests/{test_normalize_by_median.py,test_scripts.py}: remove explicit
   'parse_description' from screed open calls.
   * khmer/_khmer.cc,lib/Makefile,lib/hashtable.{cc,hh},setup.py: removed
   WITH_INTERNAL_METRICS and trace_logger/perf_metrics references.
   * lib/perf_metrics.{cc,hh},lib/trace_logger.{cc,hh}: removed unused files.

2015-07-24  Jacob Fenton  <bocajnotnef@gmail.com>

   * doc/dev/getting-started.rst: added instructions for second contribution

2015-07-22  Jacob Fenton  <bocajnotnef@gmail.com>

   * tests/test_read_parsers.py: added workaround for bug in OSX Python
   * Makefile: respect that workaround when running the tests
