@@ -220,7 +220,7 @@ def get_n_primes_near_x(number, target):
 
     if len(primes) != number:
         raise RuntimeError("unable to find %d prime numbers < %d" % (number,
-                                                                  target))
+                                                                     target))
 
     return primes
 
