@@ -80,6 +80,7 @@ def test_normalize_by_median_unpaired_final_read():
     script = 'normalize-by-median.py'
     args = ['-C', CUTOFF, '-k', '17', '-p', infile]
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "ERROR: Unpaired reads when require_paired" in err, err
 
 
@@ -92,6 +93,7 @@ def test_normalize_by_median_sanity_check_0():
     script = 'normalize-by-median.py'
     args = ['-U', '1024', '--max-mem', '60', infile]
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "recommended false positive ceiling of 0.1!" in err, err
 
 
@@ -104,6 +106,7 @@ def test_normalize_by_median_sanity_check_1():
     script = 'normalize-by-median.py'
     args = ['-U', '83', '--max-tablesize', '17', infile]
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "Warning: The given tablesize is too small!" in err, err
 
 
@@ -130,6 +133,7 @@ def test_normalize_by_median_unforced_badfile():
     script = 'normalize-by-median.py'
     args = ['-C', CUTOFF, '-k', '17', infile]
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "ERROR: [Errno 2] No such file or directory:" in err, err
 
     if os.path.exists(outfile):
@@ -147,6 +151,7 @@ def test_normalize_by_median_contradictory_args():
     args = ['-C', '1', '-k', '17', '--force-single', '-p', '-R',
             outfile, infile]
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "cannot both be set" in err, err
 
 
@@ -316,6 +321,7 @@ def test_normalize_by_median_double_file_name():
     args = [utils.get_test_data('test-abund-read-2.fa'), infile]
 
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "Duplicate filename--Cannot handle this!" in err, err
 
 
@@ -327,6 +333,7 @@ def test_normalize_by_median_stdin_no_out():
     args = ["-"]
 
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert "Accepting input from stdin; output filename" in err, err
 
 
@@ -446,7 +453,8 @@ def test_normalize_by_median_impaired():
 
     script = 'normalize-by-median.py'
     args = ['-C', CUTOFF, '-p', '-k', '17', infile]
-    _, out, err = utils.runscript(script, args, in_dir, fail_ok=True)
+    status, out, err = utils.runscript(script, args, in_dir, fail_ok=True)
+    status != 0
     assert 'ERROR: Unpaired reads ' in err, err
 
 
@@ -521,6 +529,7 @@ def test_normalize_by_median_emptycountingtable():
     script = 'normalize-by-median.py'
     args = ['-C', CUTOFF, '--loadtable', infile, infile]
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
+    assert status != 0
     assert 'ValueError' in err, (status, out, err)
 
 
@@ -535,10 +544,7 @@ def test_normalize_by_median_fpr():
     args = ['-f', '-k 17', '-x ' + str(MAX_TABLESIZE_PARAM), infile]
 
     (status, out, err) = utils.runscript(script, args, in_dir, fail_ok=True)
-
-    print(out)
-    print(err)
-
+    assert status != 0
     assert os.path.exists(infile + '.keep'), infile
     assert '** ERROR: the graph structure is too small' in err, err
 
